--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,7 @@ dmypy.json
 *.zip
 artifacts/prepare_base_model/base_model_updated.h5
 artifacts/prepare_base_model/base_model.h5
+artifacts/training/model.h5
+artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-10-20-22-59-50/validation/events.out.tfevents.1666325296.DESKTOP-1CSL7NG.10328.1.v2
+artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-10-20-22-59-50/train/events.out.tfevents.1666286999.DESKTOP-1CSL7NG.10328.0.v2
+artifacts/prepare_callbacks/checkpoint_dir/model.h5
